# llama-agent

./: .gitignore  CODE_REVIEW.md  Cargo.toml  EXAMPLES.md  MIGRATION.md  PERFORMANCE.md  README.md  texts.txt
examples/: README.md  basic_usage.rs  cli_examples.md  embedding_cli_examples.md  error_handling.rs  integration_tests.rs  mcp_integration.rs  performance_examples.rs  streaming.rs  tool_workflow.rs
issues/: 01K232X4RQ4EE7P7K4FEZFC4YA.md  01K23372F3J7BR0SCRE0SY7SHK.md  01K23668049NXBX5YW2J67SH26.md  01K23678FT3KVQTYSQD7B5T2Q6.md  01K23JB79BB4VV9PQM86BDFR7M.md  01K23JFXPBR0WWAVQ0MGCFGYS5.md  01K24STE90M86SXBPP93YCRMVQ.md  01K254MXGQD82X016H4YZNDXET.md  01K2573SDJ9GBGXK1W60AB8WAC.md  01K25A11JF4SKP4VDEY2BDMM1X.md  01K25JG286TTQXJCTX7M9AYSW0.md  01K27MVRGZH7NYZR75HRDNASJH.md  01K2D6V3AYYJY81AV6Z15F7WN4.md  01K2D81AW0BAVVWWRK48N8Z1HY.md  01K2D82F51PND06FR09W997T6E.md  01K2DXBF3QRN4Z9Q3799RT4ZSY.md  AGENT_000001_workspace-foundation.md  AGENT_000002_core-types.md  AGENT_000003_model-config.md  AGENT_000004_model-manager.md  AGENT_000005_request-queue.md  AGENT_000006_session-manager.md  AGENT_000007_chat-template.md  AGENT_000008_mcp-client.md  AGENT_000009_agent-server.md  AGENT_000010_streaming-support.md  AGENT_000011_cli-foundation.md  AGENT_000012_cli-integration.md  AGENT_000013_basic-testing.md  AGENT_000014_tool-call-workflow.md  AGENT_000015_example-integration.md  EMBEDDING_000001_llama-loader-foundation.md  EMBEDDING_000002_extract-model-types.md  EMBEDDING_000003_extract-huggingface-loading.md  EMBEDDING_000005_implement-model-loader.md  EMBEDDING_000006_migrate-llama-agent.md  EMBEDDING_000007_embedding-crate-foundation.md  EMBEDDING_000009_batch-processor-implementation.md  EMBEDDING_000010_embedding-library-integration-testing.md  EMBEDDING_000011_rename-cli-foundation.md  (+22 more)
issues/complete/: 01K231F356PPYFXC3JHX00P97A.md  01K23372F3J7BR0SCRE0SY7SHK.md  01K23JB79BB4VV9PQM86BDFR7M.md  01K23JFXPBR0WWAVQ0MGCFGYS5.md  01K24STE90M86SXBPP93YCRMVQ.md  01K251WPB3Q4E4XYFHAFZFXEJD.md  01K254F0KWFR6HJAZ27M2TDBY3.md  01K254ZTTZTNVWA086KKWP8FCH.md  01K25A11JF4SKP4VDEY2BDMM1X.md  01K27MVRGZH7NYZR75HRDNASJH.md  01K2D81AW0BAVVWWRK48N8Z1HY.md  01K2D82F51PND06FR09W997T6E.md  01K2DF031TZHTD9K8N6BPSVA6H.md  01K2DZDT2Z1KQE4QZ6YGVEW8FB.md  01K2F6DWGD11HW193GSHEJWD8A.md  01K2FEWEQ6Y1KEGYBBC25JEMMB.md  01K2FHVHTKJ1YF10YWW1PYDKPG.md  01K2FKD5XY0YTJC7FMTYKVNYDH.md  01K2FPRZZF11CXWDQ9HEPDDVGD.md  01K2FRFVQ4347VN0M732YJHXE6.md  AGENT_000001_workspace-foundation.md  AGENT_000002_core-types.md  AGENT_000003_model-config.md  AGENT_000004_model-manager.md  AGENT_000005_request-queue.md  AGENT_000006_session-manager.md  AGENT_000007_chat-template.md  AGENT_000008_mcp-client.md  AGENT_000009_agent-server.md  AGENT_000010_streaming-support.md  AGENT_000013_basic-testing.md  AGENT_000014_tool-call-workflow.md  AGENT_000015_example-integration.md  AGENT_000016_optimization-polish.md  EMBEDDING_000002_extract-model-types.md  EMBEDDING_000003_extract-huggingface-loading.md  EMBEDDING_000004_implement-cache-manager.md  EMBEDDING_000006_migrate-llama-agent.md  EMBEDDING_000007_embedding-crate-foundation.md  EMBEDDING_000008_embedding-model-implementation.md  (+16 more)
llama-agent/: Cargo.toml
llama-agent-cli/: Cargo.toml
llama-agent-cli/src/: lib.rs  main.rs
llama-agent-cli/tests/: integration_test.rs
llama-agent/src/: agent.rs  chat_template.rs  dependency_analysis.rs  lib.rs  mcp.rs  model.rs  queue.rs  session.rs  types.rs
llama-agent/src/stopper/: eos.rs  max_tokens.rs  mod.rs  repetition.rs
llama-agent/src/validation/: errors.rs  mod.rs  traits.rs
llama-agent/src/validation/generation_request/: composite_validator.rs  message_validator.rs  mod.rs  parameter_validator.rs  session_validator.rs
llama-agent/src/validation/tool_call/: argument_validator.rs  mod.rs
llama-agent/tests/: stopper_basic_integration.rs  stopper_integration_tests.rs  stopper_integration_tests_simple.rs
llama-cli/: Cargo.toml  README.md
llama-cli/src/: embed.rs  generate.rs  lib.rs  main.rs  parquet_writer.rs  test_embedding_dimensions.rs  test_parquet_compatibility.rs
llama-cli/tests/: README.md  cli_integration_tests.rs  integration_test.rs
llama-cli/tests/data/: edge_cases.txt  large_texts.txt  malformed.txt  medium_texts.txt  multilingual.txt  small_texts.txt
llama-embedding/: Cargo.toml  README.md
llama-embedding/src/: batch.rs  error.rs  lib.rs  model.rs  types.rs
llama-embedding/tests/: basic_test.rs  batch_processor_tests.rs  integration_test.rs  real_model_integration_test.rs
llama-loader/: Cargo.toml  README.md
llama-loader/examples/: model_loader_example.rs
llama-loader/src/: cache.rs  detection.rs  error.rs  huggingface.rs  lib.rs  loader.rs  multipart.rs  retry.rs  types.rs
llama-loader/tests/: integration_test.rs
specification/: embedding.md  stopping.md  validation.md
specification/complete/: index.md
specifications/: index.md
specifications/complete/: index.md
tests/: END_TO_END_TESTS.md  cli_tests.rs  dependency_analysis_tests.rs  end_to_end_integration_tests.rs  examples_integration_test.rs  integration_tests.rs  property_tests.rs  tool_calling_integration_test.rs  tool_workflow_tests.rs
tests/common/: mod.rs
