[workspace]
members = [
    "llama-agent",
    "llama-agent-cli",
]
resolver = "2"

[workspace.dependencies]
# Core inference
llama-cpp-2 = "0.1.109"

# MCP integration  
rmcp = { version = "0.4.0", features = ["transport-io"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
ulid = { version = "1.0", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.0"

# Async traits
async-trait = "0.1"

# Futures
futures = "0.3"

# Test dependencies
tempfile = "3.0"