[package]
name = "llama-agent-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "llama-agent-cli"
path = "src/main.rs"

[dependencies]
# Reference to the core library
llama-agent = { path = "../llama-agent" }

# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }