[package]
name = "llama-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "llama-cli"
path = "src/main.rs"

[lib]
name = "llama_cli"
path = "src/lib.rs"

[dependencies]
# Workspace crates
llama-agent = { path = "../llama-agent" }
llama-loader = { workspace = true }
llama-embedding = { path = "../llama-embedding" }

# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Parquet support
polars = { workspace = true }

# Progress bars
indicatif = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }