[package]
name = "llama-embedding"
version = "0.1.0"
edition = "2021"
description = "Text embedding functionality using llama-cpp-2 with batch processing support"
authors = ["Claude"]
license = "MIT"

[dependencies]
llama-loader = { workspace = true }
llama-cpp-2 = { workspace = true }
tokio = { workspace = true }
md5 = "0.7"
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }